--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_search_lyrics">SearchLyrics</string>
     <string name="title_activity_splash_screen">SplashScreen</string>
+    <string name="title_activity_start">Start</string>
 </resources>
